manifests/apiserver/apiserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-passthrough: "true"
    kubernetes.io/ingress.class: shared-nginx
  name: k8s-on-k8s
spec:
  rules:
  - host: k8s.jacksontong.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: apiserver
            port: 
              number: 443
  tls:
  - hosts:
    - k8s.jacksontong.coms
